cargo-features = ["edition"]

[package]
edition = "2018"
name = "zerodmg"
version = "0.1.0"
authors = ["Jeremy Banks <_@jeremy.ca>"]

[dependencies]
zerodmg-emulator = { version = "0.1.0", path = "zerodmg-emulator" }
zerodmg-utils = { version = "0.1.0", path = "zerodmg-utils" }
futures = "0.1.*"
hyper = "0.11.*"
tokio = "0.1.7"
rand = "0.5.2"
image = "0.19.0"
