cargo-features = ["edition"]

[package]
edition = "2018"
name = "zerodmg"
version = "0.1.6"
license = "MIT"
authors = ["Jeremy Banks <_@jeremy.ca>"]
repository = "https://github.com/jeremyBanks/0dmg"
description = "pieces of a naive incomplete broken game boy emulator"
readme = "README.md"

[dependencies]
zerodmg-emulator = { version = "0.1.6", path = "zerodmg-emulator" }
zerodmg-utils = { version = "0.1.6", path = "zerodmg-utils" }
zerodmg-codes = { version = "0.1.6", path = "zerodmg-codes" }
futures = "0.1.*"
hyper = "0.11.*"
tokio = "0.1.7"
rand = "0.5.2"
image = "0.19.0"
