cargo-features = ["edition"]

[package]
edition = "2018"
name = "zerodmg-codes"
version = "0.1.9"
license = "MIT"
authors = ["Jeremy Banks <_@jeremy.ca>"]
repository = "https://github.com/jeremyBanks/0dmg"
description = "pieces of a naive incomplete broken game boy emulator"
readme = "../README.md"

[dependencies]
zerodmg-utils = { version = "0.1.9", path = "../zerodmg-utils" }
derive_more = "0.11.0"