cargo-features = ["edition"]

[package]
edition = "2018"
name = "zerodmg-emulator"
version = "0.1.1"
license = "MIT"
authors = ["Jeremy Banks <_@jeremy.ca>"]
repository = "https://github.com/jeremyBanks/0dmg"
description = "pieces of a naive incomplete broken game boy emulator"

[dependencies]
zerodmg-utils = { version = "0.1.1", path = "../zerodmg-utils" }
image = "0.19.0"
